--- a/firstPage.html
+++ b/firstPage.html
@@ -23,7 +23,7 @@
 
 
     </div>
-    <button type="button" name="saibaMais" for="box">Details</button>
+    <button type="button" name="saibaMais" for="boxContent" class="details">Details</button>
   </div>
 
   <div class="box" id="box2">
@@ -33,7 +33,7 @@
 
 
     </div>
-    <button type="button" name="saibaMais" for="box">Details</button>
+    <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
   <div class="box" id="box3">
@@ -43,7 +43,7 @@
 
 
     </div>
-    <button type="button" name="saibaMais" for="box">Details</button>
+    <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
 
@@ -54,7 +54,7 @@
 
 
     </div>
-    <button type="button" name="saibaMais" for="box">Details</button>
+    <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
   <div class="box" id="box5">
@@ -64,7 +64,7 @@
 
 
     </div>
-    <button type="button" name="saibaMais" for="box">Details</button>
+    <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
   <div class="box" id="box6">
@@ -74,7 +74,7 @@
 
 
     </div>
-    <button type="button" name="saibaMais" for="box">Details</button>
+    <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
     </div>
