Inserindo itens na página

--- a/firstPage.html
+++ b/firstPage.html
@@ -19,9 +19,10 @@
   <div class="box" id="box1">
     <div class="boxContent">
       <h2>Teste</h2>
-      <a>Descrição</a>
-
-
+      <h3>Descrição:</h3>
+      <p class = "descricao"> Teste</p>
+      <h3>Comics:</h3>
+      <a class="comics">TesteTeste</a>
     </div>
     <button type="button" name="saibaMais" for="boxContent" class="details">Details</button>
   </div>
@@ -29,9 +30,10 @@
   <div class="box" id="box2">
     <div class="boxContent">
       <h2>Teste</h2>
-      <a>Descrição</a>
-
-
+      <h3>Descrição:</h3>
+      <p class = "descricao"> Teste</p>
+      <h3>Comics:</h3>
+      <a class="comics">TesteTeste</a>
     </div>
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
@@ -39,9 +41,10 @@
   <div class="box" id="box3">
     <div class="boxContent">
       <h2>Teste</h2>
-      <a>Descrição</a>
-
-
+      <h3>Descrição:</h3>
+      <p class = "descricao"> Teste</p>
+      <h3>Comics:</h3>
+      <a class="comics">TesteTeste</a>
     </div>
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
@@ -50,9 +53,10 @@
   <div class="box" id="box4">
     <div class="boxContent">
       <h2>Teste</h2>
-      <a>Descrição</a>
-
-
+      <h3>Descrição:</h3>
+      <p class = "descricao"> Teste</p>
+      <h3>Comics:</h3>
+      <a class="comics">TesteTeste</a>
     </div>
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
@@ -60,9 +64,10 @@
   <div class="box" id="box5">
     <div class="boxContent">
       <h2>Teste</h2>
-      <a>Descrição</a>
-
-
+      <h3>Descrição:</h3>
+      <p class = "descricao"> Teste</p>
+      <h3>Comics:</h3>
+      <a class="comics">TesteTeste</a>
     </div>
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
@@ -70,9 +75,10 @@
   <div class="box" id="box6">
     <div class="boxContent">
       <h2>Teste</h2>
-      <a>Descrição</a>
-
-
+      <h3>Descrição:</h3>
+      <p class = "descricao"> Teste</p>
+      <h3>Comics:</h3>
+      <a class="comics">TesteTeste</a>
     </div>
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
