--- a/firstPage.html
+++ b/firstPage.html
@@ -19,33 +19,36 @@
   <div class="box" id="box1">
     <div class="boxContent">
       <h2>Teste</h2>
-      <h3>Descrição:</h3>
+      <h3>Description:</h3>
       <p class = "descricao"> Teste</p>
       <h3>Comics:</h3>
       <a class="comics">TesteTeste</a>
     </div>
+    <img class="foto" src="/img/marvel-logo.png" alt="teste">
     <button type="button" name="saibaMais" for="boxContent" class="details">Details</button>
   </div>
 
   <div class="box" id="box2">
     <div class="boxContent">
       <h2>Teste</h2>
-      <h3>Descrição:</h3>
+      <h3>Description:</h3>
       <p class = "descricao"> Teste</p>
       <h3>Comics:</h3>
       <a class="comics">TesteTeste</a>
     </div>
+    <img class="foto" src="/img/marvel-logo.png" alt="teste">
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
   <div class="box" id="box3">
     <div class="boxContent">
       <h2>Teste</h2>
-      <h3>Descrição:</h3>
+      <h3>Description:</h3>
       <p class = "descricao"> Teste</p>
       <h3>Comics:</h3>
       <a class="comics">TesteTeste</a>
     </div>
+    <img class="foto" src="/img/marvel-logo.png" alt="teste">
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
@@ -53,33 +56,36 @@
   <div class="box" id="box4">
     <div class="boxContent">
       <h2>Teste</h2>
-      <h3>Descrição:</h3>
+      <h3>Description:</h3>
       <p class = "descricao"> Teste</p>
       <h3>Comics:</h3>
       <a class="comics">TesteTeste</a>
     </div>
+    <img class="foto" src="/img/marvel-logo.png" alt="teste">
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
   <div class="box" id="box5">
     <div class="boxContent">
       <h2>Teste</h2>
-      <h3>Descrição:</h3>
+      <h3>Description:</h3>
       <p class = "descricao"> Teste</p>
       <h3>Comics:</h3>
       <a class="comics">TesteTeste</a>
     </div>
+    <img class="foto" src="/img/marvel-logo.png" alt="teste">
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
   <div class="box" id="box6">
     <div class="boxContent">
       <h2>Teste</h2>
-      <h3>Descrição:</h3>
+      <h3>Description:</h3>
       <p class = "descricao"> Teste</p>
       <h3>Comics:</h3>
       <a class="comics">TesteTeste</a>
     </div>
+    <img class="foto" src="/img/marvel-logo.png" alt="teste">
     <button type="button" name="saibaMais" for="box" class="details">Details</button>
   </div>
 
@@ -94,6 +100,6 @@
 
 </body>
 <script src="js/jquery.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
 <script src="js/challenge.js" type="text/javascript"></script>
