--- a/firstPage.html
+++ b/firstPage.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta chrset="UTF-8">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/challenge.css">
   <link rel="icon" href="img/marvel-282124.png">
 
