--- a/firstPage.html
+++ b/firstPage.html
@@ -4,6 +4,7 @@
   <meta chrset="UTF-8">
   <link rel="stylesheet" href="css/challenge.css">
   <link rel="icon" href="img/marvel-282124.png">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <title>Challenge_Marvelclass</title>
 </head>
@@ -13,87 +14,100 @@
   <h1>Super Heroes</h1>
 </div>
 
-<div class="corpo">
-  <div class="bodybox">
+  <div class="corpo">
+      <div class="bodybox">
 
-  <div class="box" id="box1">
-    <div class="boxContent">
-      <h2>Teste</h2>
-      <h3>Descrição:</h3>
-      <p class = "descricao"> Teste</p>
-      <h3>Comics:</h3>
-      <a class="comics">TesteTeste</a>
+              <div class="card bg-dark text-white card box" id="box1" style="width: 18rem;">
+              <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+              <div class="card-img-overlay">
+                <h2 class="card-title">Teste</h2>
+                <h3 class="card-subtitle mb-2">Descrição</h3>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+                <a class="card-text"> 99</a>
+              </div>
+              <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+            </div>
+
+    <div class="card bg-dark text-white card box" id="box2" style="width: 18rem;">
+    <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+    <div class="card-img-overlay">
+      <h2 class="card-title">Teste</h2>
+      <h3 class="card-subtitle mb-2">Descrição</h3>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+      <a class="card-text"> 99</a>
     </div>
-    <button type="button" name="saibaMais" for="boxContent" class="details">Details</button>
+    <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
   </div>
 
-  <div class="box" id="box2">
-    <div class="boxContent">
-      <h2>Teste</h2>
-      <h3>Descrição:</h3>
-      <p class = "descricao"> Teste</p>
-      <h3>Comics:</h3>
-      <a class="comics">TesteTeste</a>
-    </div>
-    <button type="button" name="saibaMais" for="box" class="details">Details</button>
+  <div class="card bg-dark text-white card box" id="box3" style="width: 18rem;">
+  <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+  <div class="card-img-overlay">
+    <h2 class="card-title">Teste</h2>
+    <h3 class="card-subtitle mb-2">Descrição</h3>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+    <a class="card-text"> 99</a>
   </div>
-
-  <div class="box" id="box3">
-    <div class="boxContent">
-      <h2>Teste</h2>
-      <h3>Descrição:</h3>
-      <p class = "descricao"> Teste</p>
-      <h3>Comics:</h3>
-      <a class="comics">TesteTeste</a>
-    </div>
-    <button type="button" name="saibaMais" for="box" class="details">Details</button>
+  <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+</div>
+</div>
+<div class="bodybox">
+  <div class="card bg-dark text-white card box" id="box4" style="width: 18rem;">
+  <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+  <div class="card-img-overlay">
+    <h2 class="card-title">Teste</h2>
+    <h3 class="card-subtitle mb-2">Descrição</h3>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+    <a class="card-text"> 99</a>
   </div>
+  <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+</div>
 
-
-  <div class="box" id="box4">
-    <div class="boxContent">
-      <h2>Teste</h2>
-      <h3>Descrição:</h3>
-      <p class = "descricao"> Teste</p>
-      <h3>Comics:</h3>
-      <a class="comics">TesteTeste</a>
-    </div>
-    <button type="button" name="saibaMais" for="box" class="details">Details</button>
+  <div class="card bg-dark text-white card box" id="box5" style="width: 18rem;">
+  <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+  <div class="card-img-overlay">
+    <h2 class="card-title">Teste</h2>
+    <h3 class="card-subtitle mb-2">Descrição</h3>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+    <a class="card-text"> 99</a>
   </div>
+  <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+</div>
 
-  <div class="box" id="box5">
-    <div class="boxContent">
-      <h2>Teste</h2>
-      <h3>Descrição:</h3>
-      <p class = "descricao"> Teste</p>
-      <h3>Comics:</h3>
-      <a class="comics">TesteTeste</a>
-    </div>
-    <button type="button" name="saibaMais" for="box" class="details">Details</button>
-  </div>
-
-  <div class="box" id="box6">
-    <div class="boxContent">
-      <h2>Teste</h2>
-      <h3>Descrição:</h3>
-      <p class = "descricao"> Teste</p>
-      <h3>Comics:</h3>
-      <a class="comics">TesteTeste</a>
-    </div>
-    <button type="button" name="saibaMais" for="box" class="details">Details</button>
-  </div>
+<div class="card bg-dark text-white card box" id="box6" style="width: 18rem;">
+<img src="img\marvel-282124.png" class="card-img photo" alt="...">
+<div class="card-img-overlay">
+  <h2 class="card-title">Teste</h2>
+  <h3 class="card-subtitle mb-2">Descrição</h3>
+  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+  <a class="card-text"> 99</a>
+</div>
+<button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+</div>
 
     </div>
-<div class="botoes">
-<button type="button" name="button" id ="buttonPrevious" class = "some">Previous</button>
-<button type="button" name="button" id ="buttonNext">Next >></button>
+
+    <div class="botoes">
+  <button type="button" name="button" class="some" id ="buttonPrevious" >Previous</button>
+  <button type="button" name="button" class="btn btn-warning" id ="buttonNext">Next</button>
   </div>
 </div>
 
 
 
 </body>
+
 <script src="js/jquery.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 <script src="js/challenge.js" type="text/javascript"></script>
