Fix detail's button bug

--- a/index.html
+++ b/index.html
@@ -12,99 +12,100 @@
 </head>
 
 <body>
-<div class="Titulo">
-  <h1>Super Heroes</h1>
-</div>
+  <div class="Titulo">
+    <h1>Super Heroes</h1>
+  </div>
 
-  <div class="corpo">
-      <div class="bodybox">
+  <div class="container">
+    <div class="row">
 
-              <div class="card bg-dark text-white card box" id="box1" style="width: 18rem;">
-              <img src="img\marvel-282124.png" class="card-img photo" alt="...">
-              <div class="card-img-overlay">
-                <h2 class="card-title">Teste</h2>
-                <h3 class="card-subtitle mb-2">Descrição</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
-                <a class="card-text"> 99</a>
-              </div>
-              <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
-            </div>
-    <div class="card bg-dark text-white card box" id="box2" style="width: 18rem;">
-    <img src="img\marvel-282124.png" class="card-img photo" alt="...">
-    <div class="card-img-overlay">
-      <h2 class="card-title">Teste</h2>
-      <h3 class="card-subtitle mb-2">Descrição</h3>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
-      <a class="card-text"> 99</a>
+      <div class="card bg-dark text-white card box col-sm" id="box1" >
+        <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+        <div class="card-img-overlay">
+          <h2 class="card-title">Teste</h2>
+          <h3 class="card-subtitle mb-2">Descrição</h3>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+          <a class="card-text"> 99</a>
+        </div>
+        <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+      </div>
+      <div class="card bg-dark text-white card box col-sm" id="box2" >
+        <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+        <div class="card-img-overlay">
+          <h2 class="card-title">Teste</h2>
+          <h3 class="card-subtitle mb-2">Descrição</h3>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+          <a class="card-text"> 99</a>
+        </div>
+        <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+      </div>
+
+      <div class="card bg-dark text-white card box col-sm" id="box3" >
+        <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+        <div class="card-img-overlay">
+          <h2 class="card-title">Teste</h2>
+          <h3 class="card-subtitle mb-2">Descrição</h3>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+          <a class="card-text"> 99</a>
+        </div>
+        <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+      </div>
     </div>
-    <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
-  </div>
+    <div class="row">
+      <div class="card bg-dark text-white card box col-sm" id="box4" >
+        <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+        <div class="card-img-overlay">
+          <h2 class="card-title">Teste</h2>
+          <h3 class="card-subtitle mb-2">Descrição</h3>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+          <a class="card-text"> 99</a>
+        </div>
+        <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+      </div>
 
-  <div class="card bg-dark text-white card box" id="box3" style="width: 18rem;">
-  <img src="img\marvel-282124.png" class="card-img photo" alt="...">
-  <div class="card-img-overlay">
-    <h2 class="card-title">Teste</h2>
-    <h3 class="card-subtitle mb-2">Descrição</h3>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
-    <a class="card-text"> 99</a>
-  </div>
-  <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
-</div>
-</div>
-<div class="bodybox">
-  <div class="card bg-dark text-white card box" id="box4" style="width: 18rem;">
-  <img src="img\marvel-282124.png" class="card-img photo" alt="...">
-  <div class="card-img-overlay">
-    <h2 class="card-title">Teste</h2>
-    <h3 class="card-subtitle mb-2">Descrição</h3>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
-    <a class="card-text"> 99</a>
-  </div>
-  <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
-</div>
+      <div class="card bg-dark text-white card box col-sm" id="box5" >
+        <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+        <div class="card-img-overlay">
+          <h2 class="card-title">Teste</h2>
+          <h3 class="card-subtitle mb-2">Descrição</h3>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+          <a class="card-text"> 99</a>
+        </div>
+        <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+      </div>
 
-  <div class="card bg-dark text-white card box" id="box5" style="width: 18rem;">
-  <img src="img\marvel-282124.png" class="card-img photo" alt="...">
-  <div class="card-img-overlay">
-    <h2 class="card-title">Teste</h2>
-    <h3 class="card-subtitle mb-2">Descrição</h3>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
-    <a class="card-text"> 99</a>
-  </div>
-  <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
-</div>
-
-<div class="card bg-dark text-white card box" id="box6" style="width: 18rem;">
-<img src="img\marvel-282124.png" class="card-img photo" alt="...">
-<div class="card-img-overlay">
-  <h2 class="card-title">Teste</h2>
-  <h3 class="card-subtitle mb-2">Descrição</h3>
-  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
-  <a class="card-text"> 99</a>
-</div>
-<button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
-</div>
+      <div class="card bg-dark text-white card box col-sm" id="box6" >
+        <img src="img\marvel-282124.png" class="card-img photo" alt="...">
+        <div class="card-img-overlay">
+          <h2 class="card-title">Teste</h2>
+          <h3 class="card-subtitle mb-2">Descrição</h3>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h4 class="card-subtitle mb-2">Quadrinhos: </h4>
+          <a class="card-text"> 99</a>
+        </div>
+        <button type="button" name="saibaMais" class="btn btn-warning details">Detalhes</button>
+      </div>
 
     </div>
 
-    <div class="botoes">
-  <button type="button" name="button" class="some" id ="buttonPrevious" >Previous</button>
-  <button type="button" name="button" class="btn btn-warning" id ="buttonNext">Next</button>
+        <div class="botoes">
+      <button type="button" name="button" class="some" id ="buttonPrevious" >Previous</button>
+      <button type="button" name="button" class="btn btn-warning" id ="buttonNext">Next</button>
+        </div>
   </div>
-</div>
 
 
 
 </body>
-<footer>
-<label for="footer" class = "footer">Página  <a id="page">1</a></label>
-</footer>
+
+    <footer>
+      <label for="footer" class = "footer">Página  <a id="page">1</a></label>
+    </footer>
 
 <script src="js/jquery.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
